llvm/test/CodeGen/NVPTX/unknown-intrinsic.ll
; NOTE: Assertions have been autogenerated by utils/update_llc_test_checks.py UTC_ARGS: --version 6
; RUN: not llc -march=nvptx64 -mcpu=sm_80 < %s 2>&1 | FileCheck %s

; CHECK: error: {{.*}}call to unknown intrinsic 'llvm.nvvm.unknown.intrinsic' cannot be lowered by the NVPTX backend
; CHECK: error: {{.*}}unknown intrinsic 'llvm.nvvm.unknown.intrinsic' cannot be lowered by the NVPTX backend

declare float @llvm.nvvm.unknown.intrinsic(float)

define float @caller(float %x) {
  %r = call float @llvm.nvvm.unknown.intrinsic(float %x)
  ret float %r
}
